--- a/style.css
+++ b/style.css
@@ -202,6 +202,110 @@ section{
     margin-bottom: .5rem;
 
 }
+.about .row{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.about .row .image{
+    flex: 1 1 40rem;
+}
+.about .row .image img{
+    width: 100%;
+}
+.about .row .content{
+    text-align: center;
+    flex:1 1 40rem;
+}
+
+.about .row .content h3{
+    font-size: 3rem;
+    color:var(--black);
+}
+
+.about .row .content p{
+    padding: 1rem 0;
+    line-height: 2;
+    font-size: 1.6rem;
+    color: var(--light-white);
+}
+
+.contact .heading{
+    text-align: center;
+    font-size: xx-large;
+    color: var(--black);
+
+}
+.contact .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+.contact .row .image{
+    flex: 1 1 40rem;
+}
+.contact .row .image img{
+    width: 100%;
+}
+
+.contact .row form{
+    flex: 1 1 40rem;
+
+}
+
+.contact .row form .box{
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-radius: .5rem;
+    background-color: var(--light-bg);
+    font-size: 1.8rem;
+    color: var(--white);
+    padding: 1.4rem;
+}
+.contact .row form span{
+    font-size: 1.5rem;
+    color: var(--light-white);
+}
+
+.footer{
+    background-color: var(--light-bg);
+    text-align: center;
+}
+
+.footer .share a{
+    margin:0;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--white);
+    background-color:var(--black);
+
+
+}
+
+.footer .share a:hover{
+    background-color: var(--green);
+}
+.footer .credit{
+    margin-top: 2.5rem;
+    padding:2rem;
+    padding-top: 2.5rem;
+    border-top: .1rem solid var(--light-white);
+    font-size: 2rem;
+    color: var(--light-white);
+}
+
+.footer .credit span{
+    color: var(--green);
+
+}
+
 
 
 
@@ -264,6 +368,10 @@ section{
     html{
         font-size: 50%;
         
+    }
+
+    .home .row .content h3{
+        font-size: 5rem;
     }
 
 }
